syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "cn.abellee.cniface.grpc.repository";
option java_outer_classname = "RepositoryProto";
option objc_class_prefix = "CNIFACE";

package cniface;


message Repository {
    string name = 1;
    int64 size = 2;
}

message ListRepositoryResponse {
    int64 code = 1;
    string message = 2;
    repeated Repository repositories = 3;
}

service RepositoryService {
    rpc listRepo (google.protobuf.Empty) returns ( ListRepositoryResponse) {}
    rpc addRepo (AddRepoRequest) returns ( AddRepoResponse) {}
    rpc deleteRepo (DeleteRepoRequest) returns ( DeleteRepoResponse) {}

    rpc search (SearchRequest) returns ( SearchResponse) {}
    rpc addFeature (AddFeatureRequest) returns ( AddFeatureResponse) {}
    rpc deleteFeature (deleteFeatureRequest) returns ( deleteFeatureResponse) {}
}

message deleteFeatureRequest {
    string repoName = 1;
    int64 featureId = 2;
}

message deleteFeatureResponse {
    int64 code = 1;
    string message = 2;
}

message AddFeatureRequest {
    string repoName = 1;
    int64 featureId = 2;
    string featureBase64 = 3;
}

message AddFeatureResponse {
    int64 code = 1;
    string message = 2;
}

message DeleteRepoRequest {
    string repoName = 1;
}

message DeleteRepoResponse {
    int64 code = 1;
    string message = 2;
}

message AddRepoRequest {
    string repoName = 1;
}

message AddRepoResponse {
    int64 code = 1;
    string message = 2;
}

message RepositoryRequest {
    string repoName = 1;
}

message SearchResult {
    int64 featureId = 1;
    float distance = 2;
}

message SearchRequest {
    string repoName = 1;
    string featureBase64 = 2;
    int64 topk = 3;
}

message SearchResponse {
    int64 code = 1;
    string message = 2;
    repeated SearchResult results = 3;
}

